c2rust-transpile/tests/snapshots/snapshots__transpile@wide_strings.c.2024.macos.clang22.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/os-specific/wide_strings.2024.macos.clang22.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
unsafe extern "C" {
    unsafe fn wcslen(_: *const wchar_t) -> usize;
}
pub type size_t = usize;
pub type wchar_t = ::libc::wchar_t;
#[unsafe(no_mangle)]
pub static mut static_array: [wchar_t; 2] =
    unsafe { ::core::mem::transmute::<[u8; 8], [wchar_t; 2]>(*b"x\0\0\0\0\0\0\0") };
#[unsafe(no_mangle)]
pub static mut static_array_longer: [wchar_t; 3] =
    unsafe { ::core::mem::transmute::<[u8; 12], [wchar_t; 3]>(*b"x\0\0\0\0\0\0\0\0\0\0\0") };
#[unsafe(no_mangle)]
pub static mut static_array_shorter: [wchar_t; 1] =
    unsafe { ::core::mem::transmute::<[u8; 4], [wchar_t; 1]>(*b"x\0\0\0") };
#[unsafe(no_mangle)]
pub static mut static_ptr: *const wchar_t = const {
    unsafe { ::core::mem::transmute::<[u8; 8], [::core::ffi::c_int; 2]>(*b"x\0\0\0\0\0\0\0") }
}
.as_ptr() as *const wchar_t;
#[unsafe(no_mangle)]
pub unsafe extern "C" fn func() {
    let mut array: [wchar_t; 2] =
        ::core::mem::transmute::<[u8; 8], [wchar_t; 2]>(*b"x\0\0\0\0\0\0\0");
    let mut array_longer: [wchar_t; 3] =
        ::core::mem::transmute::<[u8; 12], [wchar_t; 3]>(*b"x\0\0\0\0\0\0\0\0\0\0\0");
    let mut array_shorter: [wchar_t; 1] =
        ::core::mem::transmute::<[u8; 4], [wchar_t; 1]>(*b"x\0\0\0");
    let mut ptr: *const wchar_t = const {
        unsafe { ::core::mem::transmute::<[u8; 8], [::core::ffi::c_int; 2]>(*b"x\0\0\0\0\0\0\0") }
    }
    .as_ptr() as *const wchar_t;
    let mut len: size_t = wcslen(&raw mut array as *mut wchar_t);
}
